@@ -1,0 +1,5 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes"?>
+<strings>
+	<string id="30001">This chanel is not available in %s quality.</string>
+    <string id="30002">Change the quality setting and try again.</string>
+</strings>
