@@ -1,3 +1,6 @@
+[B]Version 1.2.1[/B]
+- Updated to danishaddons module 1.1.0
+
 [B]Version 1.2.0[/B]
 - Made it possible to set quality of streams, eg. high, medium, low
 - Not all streams are available in all qualities
